-
Bug
-
Resolution: Done
-
P1: Critical
-
5.12.9, 5.15.2
-
Linux
-
3a5617dc45e281552b9c1f7a04f0561b8fa14d94 (qt/qtdeclarative/dev) e0d6cd449822055148e1226eef03bd9b001150fc (qt/qtdeclarative/6.0) b2862e2bd84d651c1f4fb2ced96ee6f40ea1f3e4 (qt/qtdeclarative/5.15)
When running Valgrind/Leak Santizer there are indications that there are problems with the property cache. In the attached files, the leak sanitizer output is from 5.12 and the valgrind output is from 5.15 with the text example.
| For Gerrit Dashboard: QTBUG-87228 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 322644,5 | Fix QML property cache leaks of delegate items | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 323132,2 | Fix QML property cache leaks of delegate items | 6.0 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 323133,3 | Fix QML property cache leaks of delegate items | 5.15 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 324193,3 | Fix property cache leaks | 5.12 | qt/qtdeclarative | Status: MERGED | +2 | 0 |